--- a/bms_student/pubspec.yaml
+++ b/bms_student/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   flutter_map: ^7.0.2
   latlong2: ^0.9.1
   geolocator: ^13.0.2
-  razorpay_flutter: ^1.3.6
+  razorpay_web: ^3.1.3
 
 dev_dependencies:
   flutter_test:
